[metadata]
name = quincy
version = 0.2
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = StackTach.v3 REST API (no implementation)
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/StackTach/quincy
keywords =
    stacktach
    rest
    api
    klugman
    quince
    openstack
[files]
packages =
    quincy
